Refactor: Replace Express server with Netlify Functions for serverless deployment
- Add netlify.toml with publish dir (public/) and functions dir (netlify/functions/)
- Add /api/* to /.netlify/functions/* redirect rules
- Create 10 serverless functions: events, config, register, create-order, verify-payment, admin-login, admin-registrations, admin-events, contact
- Add shared _db.js (PostgreSQL via DATABASE_URL) and _auth.js (JWT) helpers
- Switch DB config from 5 separate vars to single DATABASE_URL (Neon.tech compatible)
- Update all frontend API fetch URLs in script.js, admin/index.html, admin/login.html
- Fix admin event PUT/DELETE to use ?id= query params (no Express path params)
- Replace file upload with URL-based coordinator image input
- Clean up package.json: remove Express, helmet, multer, body-parser, rate-limiter

--- a/package.json
+++ b/package.json
@@ -1,23 +1,19 @@
 {
-  "name": "aura-2026-backend",
+  "name": "yugenfest-2026",
   "version": "1.0.0",
-  "description": "Fullstack backend for Aura 2026 Cultural Fest",
-  "main": "server.js",
+  "description": "YuGen Fest 2026 Cultural Symposium - Netlify Serverless",
   "scripts": {
-    "start": "node server.js",
-    "dev": "node --watch server.js"
+    "dev": "netlify dev",
+    "start": "netlify dev"
   },
   "dependencies": {
-    "body-parser": "^1.20.2",
-    "cors": "^2.8.6",
     "dotenv": "^17.3.1",
-    "express": "^4.18.2",
-    "express-rate-limit": "^8.2.1",
-    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.3",
-    "multer": "^2.0.2",
     "nodemailer": "^8.0.1",
     "pg": "^8.18.0",
     "razorpay": "^2.9.6"
+  },
+  "devDependencies": {
+    "netlify-cli": "^17.0.0"
   }
 }
