--- a/.env.example
+++ b/.env.example
@@ -5,12 +5,11 @@
 #   1. Copy this file and rename it to ".env"
 #   2. Fill in your actual values below
 #   3. NEVER commit the .env file to Git
+#   4. On Netlify: add these in Site Settings → Environment Variables
 # ============================================================
 
-# --- Server ---
-PORT=3000
-BASE_URL=http://localhost:3000
-MAINTENANCE_MODE=false
+# --- Site URL (used in emails) ---
+BASE_URL=https://your-site-name.netlify.app
 
 # --- Email (Gmail App Password) ---
 # Tutorial: https://myaccount.google.com/apppasswords
@@ -19,7 +18,7 @@ EMAIL_PASS=your_16_char_app_password
 
 # --- Razorpay Payment Gateway ---
 # Get keys from: https://dashboard.razorpay.com/app/keys
-RAZORPAY_KEY_ID=rzp_test_XXXXXXXXXXXX
+RAZORPAY_KEY_ID=rzp_live_XXXXXXXXXXXX
 RAZORPAY_KEY_SECRET=your_razorpay_secret
 
 # --- Admin Panel Credentials ---
@@ -27,12 +26,10 @@ ADMIN_USERNAME=choose_a_username
 ADMIN_PASSWORD=choose_a_strong_password
 
 # --- JWT Security ---
-# Generate a strong random string (e.g., run: node -e "console.log(require('crypto').randomBytes(64).toString('hex'))")
+# Generate: node -e "console.log(require('crypto').randomBytes(64).toString('hex'))"
 JWT_SECRET=replace_with_a_long_random_string
 
-# --- PostgreSQL Database ---
-DB_USER=postgres
-DB_HOST=localhost
-DB_NAME=vibrance
-DB_PASSWORD=your_db_password
-DB_PORT=5432
+# --- PostgreSQL (Neon.tech - FREE cloud database) ---
+# Sign up at https://neon.tech, create a DB, and copy the connection string here
+# Format: postgresql://user:password@host/dbname?sslmode=require
+DATABASE_URL=postgresql://neondb_owner:your_password@ep-xxx.us-east-2.aws.neon.tech/neondb?sslmode=require
